@@ -6,7 +6,7 @@ instrument = "Menuetto I";		% duh
 description =	 "Cello suite transcribed for Viola";
 source =	 "?";
 opus =	 "BWV 1008 no. 5";
-composer =	 "Johann Sebastian Bach (1685-1750)";
+composer =	 "Johann Sebastian Bach(1685-1750)";
 enteredby =	 "JCN";
 copyright =	 "public domain";
 }
@@ -22,13 +22,13 @@ copyright =	 "public domain";
 % \tempo{Moderato}
 % \metron{4=120}
 %
-% \key\F		% \key is F ( f-major )
+% \key\F		% \key is F( f-major )
 %
 % \slope{30}		% Fool MusiXTeX into 30 / 10 steeper beam
 %		% because piece is set very tightly
 
 IImenuetto = \melodic{
-	\property Voice.beamslopedamping = \infinity
+%	\property Voice.beamslopedamping = \infinity
 	\clef"alto";
 	\property Staff.instrument = cello
 	\meter 3/4;
@@ -40,19 +40,30 @@ IImenuetto = \melodic{
 %%2
 	\textstyle "finger";		% ugh.
 	
-	< [ bes8^"1"( e8 c8_"2"_"4" >
-		)a8 bes8-. g8-. ] a4-.^"4" |
-
+	\multi 2 < 
+		{ \stemup; [ bes8^"1"( )a8 bes8-. g8-. ] a4-.^"4" }
+		
+		{ \stemdown; < e8_"2" c8_"4" > }
+	> |
+	\stemboth;
 %%3
-	\property Voice.beamslopedamping = \normal
+%	\property Voice.beamslopedamping = \normal
 	< d4 'bes4-. > g4-. [ f8-. e8-. ] |
-	\property Voice.beamslopedamping = \infinity
+%	\property Voice.beamslopedamping = \infinity
 %%4
-	< [ f8( 'a > e8 )d8 cis8-. 'b8-. 'a8-. ]
+	\multi 2 < 
+		{ \stemup; [ f8( e8 )d8 cis8-. 'b8-. 'a8-. ] }
+		{ \stemdown; 'a }
+	> |
+	\stemboth;
 %%5
 	< a2 f2 d2 > bes!4-. |
 %%6
-	< [ bes8 e8 > a8 bes8-. g8-. ]
+	\multi 2 < 
+		{ \stemup; [ bes8 a8 bes8-. g8-. ] }
+		{ \stemdown; e8 }
+	>
+	\stemboth;
 	c'!4-. |
 %%7
 	< a4-. f4>
@@ -60,58 +71,83 @@ IImenuetto = \melodic{
 	< e'4-.-\downbow g4 'g4 > |
 %%8
 	< cis'2.-\upbow e2. 'a2. > 
-		\bar ":|:";
+	\bar ":|:";
 %%9
 	\clef "violin";
 	< e'2 a2 \f >
-	\property Voice.beamslopedamping = \normal
+%	\property Voice.beamslopedamping = \normal
 	[ d'8( e'16 )f'16 ] |
-	\property Voice.beamslopedamping = \infinity
+%	\property Voice.beamslopedamping = \infinity
 %%10
-	< [ e'8( g8 > d' cis'_"2" )e' a ()  g8 ] |
+	\multi 2 < 
+		{ \stemup; [ e'8( d' cis'_"2" )e' a( )g8 ] }
+		{ \stemdown; g8 }
+	> |
+	\stemboth;
 %%11
-	\multi 2 <  
-		{\stemup a4()  d'4 cis'4-. }
-		{ \stemdown f2 e4 } > |
-	\stemboth
+	\multi 2 <
+		{ \stemup; a4( )d'4 cis'4-. }
+		{ \stemdown; f2 e4 } 
+	> |
+	\stemboth;
 %%12
-	% oeps: slur gets attached at d8 iso g'8!
-%	< [ g'8^"4"( d8 > f' e' )f' d'^"3"()   c' ] |
-	% wrong still...
-	< { [ g'8^"4"( f' e' )f' d'^"3"()   c' ] } { [ d8 ] } > |
+	\multi 2 < 
+		{ \stemup; [ g'8^"4"( f' e' )f' d'^"3"( ) c' ] } 
+		{ \stemdown; d8 }
+	> |
+	\stemboth;
 %%13
 	\clef "alto";
 	\multi 2 <
-		 { \stemup bes2 c'4 }
-		 { \stemdown g4()  f4 e4 }% ugh
+		
+		{ \stemup; bes2 c'4 }
+		{ \stemdown; g4( )f4 e4 }% ugh
 	> |
-	\stemboth
+	\stemboth;
 %%14
-	< [ a8 f8 > g8 a8 f8 ] < d'4-\upbow e4 'bes4 > |
+	\multi 2 < 
+		{ \stemup; [ a8 g8 a8 f8 ] } 
+		{ \stemdown; f8 }
+	>
+	\stemboth;
+	< d'4-\upbow e4 'bes4 > |
 %%15
-	< c'4-\downbow f4 'a4 > [ bes8()  a8 g8 a8 ] |
+	< c'4-\downbow f4 'a4 > [ bes8( )a8 g8 a8 ] |
 %%16
 	[ f( e8 )f a8-. g8-. bes8-. ] |
 %%17
 	< a2^"0"^\trill fis2_"3" > bes4 |
 %%18
-	< { [ c'8 ()  bes8 c' a8 ] } es8 > fis4^\trill |
+	\multi 2 < 
+		{ \stemup; [ c'8( )bes8 c' a8 ] } 
+		{ \stemdown; es8 }
+	>
+	\stemboth;
+	fis4^\trill |
 %%19
 	< d'4-\downbow g4 'bes4 > < c'4-\upbow g4 c4 > < [ bes8 d8 > a8 ] |
 %%20
-	< { [ c'8 ( bes8 a8 )bes g()  bes8 ] }  d8  g8  > |
+	\multi 2 < 
+		{ \stemup; [ c'8( bes8 a8 )bes g( )bes8 ] }
+		{ \stemdown; < d8  g8  > }
+	> |
+	\stemboth;
 %%21
 	\multi 2 <  
-		{\stemup  d'4( \stemup )cis'4 d'4 }  
-		{ \stemdown g2 f4 }
+		{ \stemup; d'4( )cis'4 d'4 }  
+		{ \stemdown; g2 f4 }
 	> |
-	\stemboth
+	\stemboth;
 %%22
-	< { [ g8 ()  f8 g8 e8 ] }  cis8  > < f4 d4 > |
+	\multi 2 < 
+		{ \stemup; [ g8( )f8 g8 e8 ] f4 }
+		{ \stemdown; cis8 d4 }
+	> |
+	\stemboth;
 %%23
-	\property Voice.beamslopedamping = \normal
+%	\property Voice.beamslopedamping = \normal
 	[ 'g8 g8 ] < e4.^\trill 'a4. > d8-\upbow |
-	\property Voice.beamslopedamping = \infinity
+%	\property Voice.beamslopedamping = \infinity
 %%24
 	\textstyle "roman";		% ugh
 	< d2.^"fine" 'a2. 'd2._"3 mins."> 
@@ -124,6 +160,11 @@ IImenuetto = \melodic{
 	}
 	\paper{
 		linewidth= 150.0\mm;
+		% how does this work?
+		% why does space not have dim?
+		arithmetic_basicspace = 3.2;
+		% how can multiplier have dim?
+		arithmetic_mulitplier = 9.\pt;
 		\output "scsii-menuetto.out";
 	}
 	\midi{ 
